Colaboratory kullanılarak oluşturuldu

--- a/Python_101yilmaz.ipynb
+++ b/Python_101yilmaz.ipynb
@@ -214,8 +214,8 @@
         "id": "QzUppEjoXLPM"
       },
       "source": [
-        "print(\"Bu satırın devamına bir yorum ekleyin\")\n",
-        "print(\"Bu satırı devre dışı bırakın!\")"
+        "print(\"Bu satırın devamına bir yorum ekleyin\") #Buraya yorum ekledim.\n",
+        "#print(\"Bu satırı devre dışı bırakın!\")"
       ],
       "execution_count": null,
       "outputs": []
