Colaboratory kullanılarak oluşturuldu

--- a/Python_101yilmaz.ipynb
+++ b/Python_101yilmaz.ipynb
@@ -185,7 +185,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZjHL-qoEd7Bj"
+        "id": "ZjHL-qoEd7Bj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7e817164-fe0e-4cef-b7f8-d4bfd3f5d828"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -195,8 +199,17 @@
         "print(\"Merhaba!\")  # yorumlar kod satırının devamında da yapılabilir.\n",
         "# print(\"Bu kod geçici olarak devre dışı bırakılmıştır.\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# bu bir yorum değildir\n",
+            "Merhaba!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -210,14 +223,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QzUppEjoXLPM"
+        "id": "QzUppEjoXLPM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6d344e5-3cfb-4021-ee16-e3dcea1459af"
       },
       "source": [
         "print(\"Bu satırın devamına bir yorum ekleyin\") #Buraya yorum ekledim.\n",
         "#print(\"Bu satırı devre dışı bırakın!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bu satırın devamına bir yorum ekleyin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -327,13 +352,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RmIa5BJsZ2EI"
+        "id": "RmIa5BJsZ2EI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc244975-170e-419e-c82e-45dce05784f8"
       },
       "source": [
-        "# Ekrana e-posta yazdır\n"
+        "eposta= \"kabayelyilmaz.net\"\n",
+        "print(\"eposta:\" +eposta)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "eposta:kabayelyilmaz.net\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -403,14 +441,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JrNUlQAyeqHQ"
+        "id": "JrNUlQAyeqHQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab70badd-9c58-41b1-c616-c72a980cea53"
       },
       "source": [
         "degisken3 = 'Yeni veri'\n",
-        "print()"
+        "print(degisken3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yeni veri\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -471,13 +521,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "UrGfF38CgjdQ",
-        "cellView": "both"
+        "cellView": "both",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "614de732-caaf-4acc-a358-4a34984fa4e6"
       },
       "source": [
-        "sayi = 9.0\n"
+        "sayi = 9.0\n",
+        "print(type(sayi))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -520,7 +583,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G0bwb2rBkgVN"
+        "id": "G0bwb2rBkgVN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "560b2729-4a5f-48e0-e028-11f02d4c69eb"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -541,8 +608,23 @@
         "print(type(sayi))\n",
         "print(sayi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n",
+            "6.5\n",
+            "<class 'int'>\n",
+            "6\n",
+            "<class 'float'>\n",
+            "6.0\n",
+            "<class 'str'>\n",
+            "6.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -556,13 +638,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o9ZQ6Jr3lL6A"
+        "id": "o9ZQ6Jr3lL6A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "22ac52de-a695-4441-b5f2-b6745308cfaa"
       },
       "source": [
-        "sayi = 3.14\n"
+        "sayi = 3.14\n",
+        "print(type(sayi))\n",
+        "print(sayi)\n",
+        "\n",
+        "sayi=float(sayi)\n",
+        "print(type(sayi))\n",
+        "print(sayi)\n",
+        "\n",
+        "sayi=int(sayi)\n",
+        "print(type(sayi))\n",
+        "print(sayi)\n",
+        "\n",
+        "sayi=str(sayi)\n",
+        "print(type(sayi))\n",
+        "print(sayi)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n",
+            "3.14\n",
+            "<class 'float'>\n",
+            "3.14\n",
+            "<class 'int'>\n",
+            "3\n",
+            "<class 'str'>\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -620,7 +735,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zdOXer1klJVQ"
+        "id": "zdOXer1klJVQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "28b7bf40-9710-4cfd-c4a4-c22141d9a4f9"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -655,8 +774,21 @@
         "sonuc = sayi % 4\n",
         "print(sonuc)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10.5\n",
+            "165\n",
+            "440\n",
+            "10.0\n",
+            "27000\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -677,9 +809,9 @@
         "urunBedeliAvro = 850\n",
         "pariteAvroTL = 7\n",
         "urunAdet = 3\n",
-        "pesinAdetIndirimTL = 500"
+        "pesinAdetIndirimTL = 500\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -714,7 +846,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p281janglpzz"
+        "id": "p281janglpzz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4423e725-e18d-4e81-aa35-a1112430ab1f"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -726,8 +862,17 @@
         "sayi -= 6\n",
         "print(\"Sayı = \" + str(sayi))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "Sayı = 6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -746,7 +891,7 @@
       "source": [
         "sayi = 55"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -783,7 +928,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "COYD_DtlmXgr"
+        "id": "COYD_DtlmXgr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8dc1ce55-8cb9-431b-b457-3ec597c5bacf"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -798,8 +947,17 @@
         "esitMi = (deger1 == deger2)\n",
         "print(esitMi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2028,7 +2186,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b07Mqre3XqoH"
+        "id": "b07Mqre3XqoH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "568ef15c-b8c4-42a8-c350-3ba9aeb17a99"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2040,8 +2202,18 @@
         "\n",
         "print(adresDefteri.keys())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Hacettepe Üniversitesi': 'hacettepe.edu.tr', 'ODTÜ': 'odtu.edu.tr', 'Bilkent Üniversitesi': 'bilkent.edu.tr'}\n",
+            "dict_values(['hacettepe.edu.tr', 'odtu.edu.tr', 'bilkent.edu.tr'])\n",
+            "dict_keys(['Hacettepe Üniversitesi', 'ODTÜ', 'Bilkent Üniversitesi'])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
